--- a/public/styles/components/card.css
+++ b/public/styles/components/card.css
@@ -4,7 +4,7 @@
   background-color: var(--white);
   box-shadow: 0 1px 3px rgba(0,0,0,.3);
   text-align: left;
-  margin: 1%;
+  margin: 8px;
 }
 .card a {
   color: inherit;
@@ -27,7 +27,6 @@
   line-height: 1.2;
   color: var(--hn-primary-color);
 }
-
 .card__secondary-text {
   margin: 8px 0;
   font-size: 14px;
