--- a/src/styles/components/_app-bar-top.scss
+++ b/src/styles/components/_app-bar-top.scss
@@ -8,7 +8,8 @@
     align-items: center;
     justify-content: space-between;
     padding: 16px;
-    background-color: var(--hn-primary-color);
+    //background-color: var(--hn-primary-color);
+    background-color: $primary-color;
     color: var(--white);
 }
 .app-bar-top .logo {
