--- a/src/styles/components/_tab.scss
+++ b/src/styles/components/_tab.scss
@@ -10,23 +10,26 @@
     font-weight: 400;
     color: var(--white);
     text-transform: uppercase;
+    overflow-x: hidden;
 }
 .tabs__tab {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-grow: 1;
-    height: 48px;
-    padding-left: 16px;
-    padding-right: 16px;
     text-decoration: none;
-    color: rgba(255,255,255,.9);
+    color: rgba(255,255,255,.8);
 }
 .tabs__tab--active {
     color: var(--white);
     border-bottom: 3px solid var(--white);
 }
 .tabs__tab a {
+    display: flex;
+    align-items: center;
+    height: 48px;
+    padding-left: 16px;
+    padding-right: 16px;
     text-decoration: none;
     color: inherit;
 }
