--- a/src/styles/components/_variables.scss
+++ b/src/styles/components/_variables.scss
@@ -9,6 +9,8 @@
   --hn-gray-lightest: #f5f5f5;
 }
 
+$primary-color: #E65100;
+
 .material-icons.md-18 { font-size: 18px; }
 .material-icons.md-24 { font-size: 24px; }
 .material-icons.md-36 { font-size: 36px; }
